--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@next/bundle-analyzer": "^14.2.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.7",
@@ -19,6 +20,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.7.2",
+    "bundle-analyzer": "^0.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "emoji-mart": "^5.5.2",
