--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "framer-motion": "^10.18.0",
     "geist": "^1.2.1",
     "lucide-react": "^0.312.0",
-    "next": "14.1.0",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-resizable-panels": "^1.0.9",
